# borderless-miner

./: .gitignore  PROMPT_CLAUDE_CODE.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/borderless_miner/: MainActivity.kt
lib/: config.dart  main.dart  theme.dart
lib/l10n/: l10n.dart  strings.dart
lib/mining/: job.dart  miner.dart  mining_isolate.dart  native_miner.dart  sha256d.dart  stratum_client.dart
lib/models/: format.dart
lib/services/: address_store.dart  btc_address.dart  pool_api.dart
lib/ui/: dashboard_screen.dart  scan_address_screen.dart
lib/ui/widgets/: buy_bitcoin_qr.dart  stat_card.dart
native/: CMakeLists.txt  miner.c
